fix wrong font-weight across the website

--- a/assets/_scss/layout/_header.scss
+++ b/assets/_scss/layout/_header.scss
@@ -6,7 +6,7 @@ header {
 .logo {
     font-family: 'Lato';
     font-size: 3em;
-    font-weight: 700;
+    font-weight: 900;
     color: $main-color;
     text-decoration: none;
     float: left;
