--- a/assets/_scss/pages/_about-us.scss
+++ b/assets/_scss/pages/_about-us.scss
@@ -140,10 +140,8 @@
 .second--name,
 .fifth--name,
 .sixth--name {
-    font-family: $main-heading-font;
     color: $main-color;
     font-size: 1.9rem;
-    font-weight: 700;
     margin-bottom: 0;
 }
 
@@ -186,7 +184,6 @@
     color: $main-color;
     margin-bottom: 0;
     font-size: 2em;
-    font-weight: 700;
 }
 
 .sixth,
